[metadata]
name = testlogging
summary = A logging handler writing log records as subunit attachments
home-page = https://github.com/freeekanayaka/testlogging
description-file = README.rst
author = Free Ekanayaka
author-email = free@ekanayaka.io
license = MIT
platform = POSIX
classifier = 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keyword = subunit, unittest

[extras]
test =
    six
    python_subunit
    coverage>=4.2
    systemfixtures
    testrepository
    python-mimeparse>=1.5.2

[bdist_wheel]
universal = 1
